<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">InventoryApp</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add New Item</string>

    <!-- Title for the activity to update an already existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Name for the editor activity [CHAR LIMIT=12] -->
    <string name="editor_activity_name">Edit Item</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Empty Inventory.</string>

    <!-- Subtitle text for the empty view that prompts the user to add items [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Click the button below to start adding items.</string>

    <!-- Text hint for "name" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Item name</string>

    <!-- Text hint for "product-code" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_product_code">Product code</string>

    <!-- Text hint for "price" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price in cents</string>

    <!-- Text hint for "quantity-in-stock" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity_in_stock">Quantity in stock</string>

    <!-- Label for button to sell item -->
    <string name="label_item_sell">Sell</string>

    <!-- Toast message that says that one item has been sold -->
    <string name="label_item_sold_part1">ONE</string>
    <string name="label_item_sold_part2">HAS BEEN SOLD.</string>

    <!-- Toast message that says that selling of the item has failed -->
    <string name="label_item_selling_failed">Cannot sell this item</string>

    <!-- Text hint for "supplier-name" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_supplier_name">Supplier</string>

    <!-- Text hint for "supplier-email-address" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_supplier_email">Supplier E-Mail</string>

    <!-- Text hint for "impending-orders" field in the editor [CHAR LIMIT=30] -->
    <string name="hint_items_ordered">Nr. of items ordered</string>

    <!-- Label for price in the catalog [CHAR LIMIT=30] -->
    <string name="label_selling_price">price:</string>

    <!-- Label for currency in the editor [CHAR LIMIT=30] -->
    <string name="label_currency_cents">&#162;</string>

    <!-- Label for currency in the catalog [CHAR LIMIT=30] -->
    <string name="label_currency">$</string>

    <!-- Label for quantity of items in stock in the editor [CHAR LIMIT=30] -->
    <string name="label_quantity_in_stock">In stock:</string>

    <!-- Label for changing the quantity of items in stock in the editor [CHAR LIMIT=30] -->
    <string name="label_change_quantity_in_stock">Edit:</string>

    <!-- Label for overview of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_overview">Overview:</string>

    <!-- Label for supplier info -->
    <string name="label_supplier">Supplier Info:</string>

    <!-- Label for impending orders [CHAR LIMIT=30] -->
    <string name="label_impending_orders">Impending orders:</string>

    <!-- Label for items units [CHAR LIMIT=30] -->
    <string name="label_item_units">items</string>

    <!-- Label for button that issues a new order [CHAR LIMIT=30] -->
    <string name="label_order_button">new order</string>

    <!-- Label for generic unknown field -->
    <string name="unknown">Unknown</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message notifying the user that a new item has been inserted into the database -->
    <string name="insert_successful">Item saved</string>

    <!-- Toast message notifying the user that the item has been updated -->
    <string name="update_successful">Saved changes</string>

    <!-- Toast message notifying the user that the item has been deleted -->
    <string name="delete_successful">Item deleted</string>

    <!-- Toast message notifying the user that inserting new item into the database has failed -->
    <string name="insert_failed">Error with saving item</string>

    <!-- Toast message notifying the user that updating the item has failed -->
    <string name="update_failed">Error with saving changes</string>

    <!-- Toast message notifying the user that deleting the item has failed -->
    <string name="delete_failed">Error with deleting item</string>

    <!-- Toast message notifying the user that item product code is a duplicate -->
    <string name="duplicate_item">Another item with the same product code already exists in this
        database</string>

    <!-- Dialog message for asking the user if he wants to delete the image -->
    <string name="delete_image_dialog_msg">Delete image?</string>

    <!-- Dialog button text for the option of canceling image deletion [CHAR LIMIT=20] -->
    <string name="cancel_image_deletion">Cancel</string>

    <!-- Dialog button text for the option of confirming image deletion [CHAR LIMIT=20] -->
    <string name="confirm_image_deletion">Delete</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
</resources>
