<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_smaller_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/ListItemName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/hint_item_name" />

        <LinearLayout
            android:id="@+id/in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/LabelInStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_quantity_in_stock" />

            <TextView
                android:id="@+id/quantity_in_stock"
                style="@style/ListItemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_smaller_margin"
        android:layout_marginTop="@dimen/item_smaller_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/touch_target_size"
            android:layout_height="@dimen/touch_target_size"
            android:layout_gravity="center_vertical">

            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_gravity="center"
                android:background="@drawable/ic_check" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                style="@style/ListItemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/hint_item_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_smaller_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/LabelInStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_selling_price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/ListItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_smaller_margin"
                    android:layout_marginStart="@dimen/item_smaller_margin" />

                <TextView
                    style="@style/ListItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_smaller_margin"
                    android:layout_marginStart="@dimen/item_smaller_margin"
                    android:text="@string/label_currency" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>